--- a/src/dune
+++ b/src/dune
@@ -45,6 +45,7 @@
 
 (library
  (name liba)
+ (public_name Lama.lib)
  (modules Language Pprinter stdpath version X86 SM)
  (libraries GT ostap)
  (flags
@@ -98,7 +99,8 @@
 (rule
  (targets pp5+gt+plugins+ostap+dump.byte)
  (deps
-  (package GT))
+  (package GT)
+  (package ostap))
  (action
   (run
    mkcamlp5
