chore: Fix compilation of tests
Signed-off-by: Kakadu <Kakadu@pm.me>

--- a/regression/dune
+++ b/regression/dune
@@ -1,6 +1,6 @@
 (rule
  (target ./test001.exe)
- (deps test001.lama ../runtime/Std.i)
+ (deps test001.lama ../runtime/Std.i ../runtime/runtime.a)
  (action
   (setenv
    LAMA
