chore: WIP on json server
Signed-off-by: Kakadu <Kakadu@pm.me>

--- a/json/tasks/1expr/dune
+++ b/json/tasks/1expr/dune
@@ -21,13 +21,11 @@
  (targets 1.bc.json)
  (mode (promote))
  (action
-  (progn
-   ;(run ls ../../../runtime)
-   (run
-    %{project_root}/json/json_bytecode.exe
-    -path
-    ../../../runtime
-    -o
-    %{targets}
-    -compile-to-bc-json
-    %{lama}))))
+  (run
+   %{project_root}/json/json_bytecode.exe
+   -path
+   ../../../runtime
+   -o
+   %{targets}
+   -compile-to-bc-json
+   %{lama})))
