--- a/json/tasks/3functions/dune
+++ b/json/tasks/3functions/dune
@@ -14,3 +14,18 @@
     %{targets}
     -src2json
     %{lama}))))
+
+(rule
+ (deps
+  (:lama 1.lama))
+ (targets 1.bc.json)
+ (mode (promote))
+ (action
+  (run
+   %{project_root}/json/json_bytecode.exe
+   -path
+   ../../../runtime
+   -o
+   %{targets}
+   -compile-to-bc-json
+   %{lama})))
