--- a/json/tasks/1expr/dune
+++ b/json/tasks/1expr/dune
@@ -1,8 +1,8 @@
 (rule
  (deps
-  (:lama 1.lama)
+  (:lama 1write.lama)
   %{project_root}/runtime/Std.i)
- (targets 1.lama.json)
+ (targets 1write.lama.json)
  (mode (promote))
  (action
   (progn
@@ -18,7 +18,7 @@
 
 (rule
  (deps
-  (:lama 1.lama)
+  (:lama 1write.lama)
   %{project_root}/runtime/Std.i)
  (targets 1write.bc.json)
  (mode (promote))
